Sec44_Chap400-XXX: optimized Test code